fixed alignment issues

--- a/web/setup/styles.css
+++ b/web/setup/styles.css
@@ -243,7 +243,7 @@ input, select, textarea {
 
 	70% {
 
-		transform: translateX(-110px) rotate(2deg);
+		transform: translateX(-240px) rotate(2deg);
 
 		opacity: 1
 
@@ -309,7 +309,7 @@ input, select, textarea {
 
 	70% {
 
-		transform: translateX(-140px) rotate(2deg);
+		transform: translateX(-240px) rotate(2deg);
 
 		opacity: 1
 
